Stop layout shifting horizontally because of scroll bars appearing and disappearing

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* || Reset */
 body {
+  overflow-y: scroll;
   margin: 0;
 }
 
